[package]
name = "neon-dds-convert"
version = "0.1.0"
description = "DDS conversion to WEBP"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
image = { version = "0.25.2", default-features = false, features = ["rayon"] }
image_dds = "0.6.0"
base64 = "0.22.1"
webp = "0.3.0"
